crates/uitest/fixtures/ty/def/associated_types.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/associated_types.fe
---
error[2-0002]: `Output` is not found
  ┌─ associated_types.fe:4:39
  │
4 │     fn add(self, _ other: T) -> Self::Output
  │                                       ^^^^^^ `Output` is not found
